# Coruro

./: .editorconfig  .gitignore  .prettierignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Justfile  Justfile.crew  LICENSE  PLAN.md  README.md  SECURITY.md  coruro_notes.json  coruro_notes.md  eslint-suppressions.json  eslint.config.js  index.html  mygitdash_notes.json  mygitdash_notes.md  offscreen.html  package-lock.json  package.json  vite.config.ts
.claude/agents/: coruro-architect.md  coruro-designer.md  coruro-explorer.md  coruro-reviewer.md
.claude/workflows/: coruro-finish.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ai-sidecar/: .swiftformat  .swiftlint.yml  Package.swift
ai-sidecar/.build/: build.db  plugin-tools.yaml
docs/: app-demo.html  ask-sessions.md  ask-work-center.md  command-center.md  neo-brutalist-bento.md  publisher.md  setup-curator.md
docs/adr/: 0001-std-process-sidecar.md  0002-git-fetch-network-carveout.md  (+3 more)
evals/: README.md
publisher-renderer/: .gitignore  README.md  package.json  render.mjs
scripts/: build-ai-sidecar.sh
src/: App.css  App.tsx  index.css  landing.md  main.tsx  types.ts  view.ts
src-tauri/: Cargo.toml  clippy.toml  rust-toolchain.toml  rustfmt.toml  tauri.conf.json
src-tauri/binaries/: .gitignore  mygitdash-ai-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  pty.rs  publisher.rs
(+237 files in other folders)
