[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lints.clippy]
# `all` is the correctness/suspicious/style/complexity/perf baseline — denied so
# regressions fail CI. `pedantic` is advisory (warn). `cognitive_complexity` is
# denied with a relaxed threshold (see clippy.toml) because match-arm command
# dispatch is idiomatic here and cognitive ≠ cyclomatic.
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cognitive_complexity = "deny"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
keyring = { version = "3", features = ["apple-native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
portable-pty = "0.9.0"

